@@ -1,5 +1,5 @@
 //
-//  Player.cs
+//  Direction.cs
 //
 //  Author:
 //       Jesse <${AuthorEmail}>
@@ -19,37 +19,16 @@
 //  You should have received a copy of the GNU General Public License
 //  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 using System;
-using System.Collections.Generic;
 
 namespace GREATLib
 {
 	/// <summary>
-	/// A player in the game.
+	/// Represents a direction in the game world.
 	/// </summary>
-    public class Player
-	{
-		/// <summary>
-		/// Represents an invalid identifier.
-		/// </summary>
-		public const int InvalidId = -1;
-
-		/// <summary>
-		/// Gets or sets the postion of the player in the world.
-		/// </summary>
-		/// <value>The postion.</value>
-		public Vec2 Position { get; set; }
-
-		/// <summary>
-		/// Gets or sets the identifier representing the player.
-		/// </summary>
-		/// <value>The identifier.</value>
-		public int Id { get; set; }
-
-        public Player()
-        {
-			Position = new Vec2(0f, 0f);
-			Id = -1;
-        }
+    public enum Direction
+    {
+		Left = -1,
+		Right = 1
     }
 }
 
