@@ -37,6 +37,8 @@
     <Compile Include="Vec2.cs" />
     <Compile Include="ServerMessage.cs" />
     <Compile Include="ClientMessage.cs" />
+    <Compile Include="Physics.cs" />
+    <Compile Include="Direction.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
