@@ -1,5 +1,5 @@
 //
-//  Player.cs
+//  Physics.cs
 //
 //  Author:
 //       Jesse <${AuthorEmail}>
@@ -19,37 +19,28 @@
 //  You should have received a copy of the GNU General Public License
 //  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 using System;
-using System.Collections.Generic;
 
 namespace GREATLib
 {
 	/// <summary>
-	/// A player in the game.
+	/// The game physics.
 	/// </summary>
-    public class Player
-	{
+    public static class Physics
+    {
 		/// <summary>
-		/// Represents an invalid identifier.
+		/// TODO: Speed depending on the player's class and actual movement speed.
 		/// </summary>
-		public const int InvalidId = -1;
+		private const float PLAYER_SPEED = 5f;
 
 		/// <summary>
-		/// Gets or sets the postion of the player in the world.
+		/// Move the specified player in the specified direction.
 		/// </summary>
-		/// <value>The postion.</value>
-		public Vec2 Position { get; set; }
-
-		/// <summary>
-		/// Gets or sets the identifier representing the player.
-		/// </summary>
-		/// <value>The identifier.</value>
-		public int Id { get; set; }
-
-        public Player()
-        {
-			Position = new Vec2(0f, 0f);
-			Id = -1;
-        }
+		/// <param name="player">Player.</param>
+		/// <param name="direction">Direction.</param>
+		public static void Move(Player player, Direction direction)
+		{
+			player.Position += (float)direction * Vec2.UnitX * PLAYER_SPEED;
+		}
     }
 }
 
